--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -33,6 +33,7 @@
         android:text="Total Pessoas: 0"
         android:textAlignment="center"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -42,29 +43,53 @@
 
     <Button
         android:id="@+id/btnHomem"
-        android:layout_width="94dp"
-        android:layout_height="68dp"
+        android:layout_width="78dp"
+        android:layout_height="99dp"
         android:layout_marginBottom="16dp"
-        android:layout_marginLeft="25dp"
-        android:background="@color/colorPrimary"
-        android:text="0"
+        android:layout_marginLeft="34dp"
+        android:layout_marginStart="25dp"
+        android:background="@drawable/homem"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="25dp" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/btnMulher"
-        android:layout_width="94dp"
-        android:layout_height="68dp"
+        android:layout_width="78dp"
+        android:layout_height="99dp"
         android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:background="@color/colorAccent"
-        android:text="0"
+        android:layout_marginStart="8dp"
+        android:background="@drawable/mulher"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.897"
         app:layout_constraintLeft_toRightOf="@+id/btnHomem"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/txtHomem"
+        android:layout_width="60dp"
+        android:layout_height="41dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="34dp"
+        android:text="0"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/btnHomem"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/txtMulher"
+        android:layout_width="60dp"
+        android:layout_height="41dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginRight="37dp"
+        android:text="0"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/btnMulher"
+        app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
