--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#4b5bb6</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#da5e88</color>
+    <color name="colorPrimaryDark">#487b6a</color>
+    <color name="colorAccent">#fbf8f9</color>
 </resources>
