--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#4b5bb6</color>
     <color name="colorPrimaryDark">#487b6a</color>
-    <color name="colorAccent">#fbf8f9</color>
+    <color name="colorAccent">#fdf9fb</color>
 </resources>
