--- a/app/src/main/res/layout/content_splash_screen.xml
+++ b/app/src/main/res/layout/content_splash_screen.xml
@@ -12,16 +12,17 @@
         android:id="@+id/imageView"
         android:layout_width="378dp"
         android:layout_height="419dp"
-        app:srcCompat="@drawable/splash"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="6dp"
         android:layout_marginLeft="3dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="6dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/splashscreen" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="52dp"
+        android:layout_marginRight="76dp"
         android:layout_marginTop="42dp"
         android:alpha="0.8"
         android:fontFamily="sans-serif-smallcaps"
@@ -31,7 +32,6 @@
         android:textSize="36sp"
         android:textStyle="bold"
         android:typeface="normal"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        android:layout_marginRight="76dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 </android.support.constraint.ConstraintLayout>
